test/expected/declare_sil-knr.out
declare x as signed long
             ^
14: error: "signed": unsupported type until C89; did you mean "__signed" or "unsigned"?
